--- a/_posts/2013-01-19-on-soa.md
+++ b/_posts/2013-01-19-on-soa.md
@@ -3,6 +3,7 @@ layout: post
 title: On SOA
 author: Nick Boyce
 date: 19th January 2012
+published: true
 ---
 
 I finally got around to reading Paul Dix's [Service-Oriented Design with Ruby and Rails](http://www.amazon.co.uk/Service-Oriented-Design-Rails-Addison-Wesley-Professional/dp/0321659368/ref=sr_1_1?ie=UTF8&qid=1358592354&sr=8-1) over the new year break. Having worked on a number of services for a platform at my previous job, I was very familiar with the benefits (and drawbacks) of [service-oriented architecture](http://en.wikipedia.org/wiki/Service-oriented_architecture) but it really concreted my understanding of what SOA could do for our organisation.
