--- a/_posts/2013-01-19-on-soa.md
+++ b/_posts/2013-01-19-on-soa.md
@@ -10,6 +10,7 @@ I finally got around to reading Paul Dix's [Service-Oriented Design with Ruby an
 I've since been devouring articles on the topic, and have listed a few below that I have particularly enjoyed.
 
 * [SOA for the Little Guys](http://rubysource.com/soa-for-the-little-guys/). This article does an amazing job of introducing SOA concepts right through to code examples.
+* [Notes on Distributed Systems for Young Bloods](http://www.somethingsimilar.com/2013/01/14/notes-on-distributed-systems-for-young-bloods/). Hugely detailed post, with a focus on pitfalls of the SOA approach. Failure at some point in the system is inevitable.
 * [Refactor Your Monolithic Rails App to a SOA](http://www.slideshare.net/ChrisWyckoff/refactor-your-monolithic-rails-app-to-a-soa) (particularly slides 11-25)
 * [Service Oriented Architecture at Square](http://confreaks.com/videos/1273-rubyconf2012-service-oriented-architecture-at-square). A really interesting presentation from Square's Chris Hunt on their SOA approach. 
 * [Abstracting Features Into Custom Reverse Proxies](http://confreaks.com/videos/1270-rubyconf2012-abstracting-features-into-custom-reverse-proxies-or-making-better-lemonade-from-chaos). Another video from Rubyconf on custom proxies to front and normalise multiple services.
