some amends to post

--- a/_posts/2013-05-05-json-api.md
+++ b/_posts/2013-05-05-json-api.md
@@ -20,38 +20,42 @@ Isn't it better to have the URL scheme define if you are looking at a document o
 For example:
 
     {
-      "posts": {
+      "posts": [{
         "id": "1",
         "title": "Rails is Omakase",
         "rels": {
           "author": 9
         }
-      },
+      }],
       "people": [{
         "id": "9",
         "name": "@d2h"
       }]
     }
 
-So to list the post title and author name would be something like:
+So to list the post title and author name would be something like (pseudo code):
 
-    {posts.title} by {people.where(id: 9).name}
+    {posts.each (post)}
+      {post.title} by {people.where(id: post.rels.author).name}
+    {end}  
 
-This is clever and probably the "right" way to do it, but is it easier to consume? I'd suggest that nesting the documents is much easier:
+Now, that's pseudo-code, and in reality it would depend on what language or framework you are using as to how easy that "where" statement is. It's definitely going to be a lot more complicated than my example to do it in vanilla JavaScript. I'd suggest that nesting the documents is much easier:
 
     {
-      "posts": {
+      "posts": [{
         "id": "1",
         "title": "Rails is Omakase",
         "author": {
           "id": "9",
           "name": "@d2h"
         }
-      }
+      }]
     }
 
 And it can be consumed like this: 
 
-    {posts.title} by {posts.author.name}
+    {posts.each (post)}
+      {post.title} by {post.author.name}
+    {end}  
   
 Yes, it's imperfect and can result in more duplication and less flexibility, but I think for a lot of cases that isn't an issue.
